# kindle-notes

./: README.md  extract.py  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-03-03-kn-cli-design.md  2026-03-03-kn-cli-implementation.md
kn/: cli.py  config.py  db.py  sync.py
kn/sources/: local.py  notebook.py
tests/: test_cli.py  test_db.py
