[project]
name = "kindle-notes"
version = "0.1.0"
description = "CLI tool to sync, browse, and search Kindle highlights"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "binary-cookies-parser>=2.1.2",
    "click>=8.1",
    "lxml>=6.0.2",
    "pillow>=12.1.1",
    "playwright>=1.49",
    "pypdf>=6.7.5",
]

[project.scripts]
kn = "kn.cli:main"
